<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">technicalTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="problem_1">Problem 1</string>
    <string name="problem_2">Problem 2</string>
    <string name="problem_3">Problem 3</string>
    <string name="title_activity_factorial">Factorial</string>
    <string name="introduce_a_number">introduce a number to calculate its factorial</string>
    <string name="calculate">calculate</string>
    <string name="here_the_factorial">Here the factorial</string>
    <string name="title_activity_decode">Decode</string>
    <string name="select_a_file_to_decode">select a file to decode</string>
    <string name="title_activity_webpage">Webpage</string>

</resources>
