<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alejandroramirez.technicaltest.MainActivity" >

    <Button
        android:id="@+id/btnProblem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:text="@string/problem_1" />

    <Button
        android:id="@+id/btnProblem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnProblem1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/problem_2" />

    <Button
        android:id="@+id/btnProblem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnProblem2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/problem_3" />

</RelativeLayout>
